src/tests/fixtures/field_values/StringFieldKillsParentOnExceptionWithoutNullableByDefaultEnables.invalid.ts.expected
-----------------
INPUT
----------------- 
// { "nullableByDefault": false }
/** @gqlType */
export default class Query {
  /**
   * @gqlField
   * @killsParentOnException
   */
  hello(): string {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_values/StringFieldKillsParentOnExceptionWithoutNullableByDefaultEnables.invalid.ts:6:7 - error: Unexpected `@killsParentOnException` tag. `@killsParentOnException` is only supported when the Grats config `nullableByDefault` is enabled.

6    * @killsParentOnException
        ~~~~~~~~~~~~~~~~~~~~~~
